--- a/package.json
+++ b/package.json
@@ -8,24 +8,26 @@
     "start": "next start"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.48.1",
+    "lucide-react": "^0.562.0",
+    "nanoid": "^5.0.9",
     "next": "14.2.35",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@supabase/supabase-js": "^2.48.1",
-    "stripe": "^14.25.0",
-    "qrcode": "^1.5.4",
-    "nanoid": "^5.0.9",
-    "lucide-react": "^0.562.0",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "stripe": "^14.25.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.15.8",
     "@types/node": "^20",
+    "@types/qrcode": "^1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/qrcode": "^1",
-    "typescript": "^5",
-    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10",
     "postcss": "^8",
-    "autoprefixer": "^10"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
